--- a/foundry.toml
+++ b/foundry.toml
@@ -2,7 +2,9 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-remappings= []
+remappings = []
 
+[fuzz]
+runs = 100000
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
